--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Dev Burguer">
+    <meta property="og:image" content="https://erick-caua.github.io/projeto-cardapio/assets/hamb-1.png"/>
+    <meta property="og:description" content="O melhor hambuger"/>
+    <meta property="og:site_name" content="Devburguer"/>
+
+
     <link rel="stylesheet" href="styles/output.css">
 
     
